--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,339 @@
 	"title": "test"
 })
 <body>
-	<header class="page-header"></header>
-	<main class="page-content"></main>
-	<footer class="page-footer"></footer>
+	<header class="page-header">
+
+		<section class="navigation-menu section-block">
+			<div class="navigation-menu__container base-container">
+				<figure class="logo-block base-figure">
+					<img class="logo-block__img" src="../img/image/design/logo.png" width="72" height="58" alt="Логотип">
+					<h2 class="logo-block__logo-title base-title">УНИВЕРСИТЕТ<br>РОСИНТЕР</h2>
+				</figure>
+				<nav class="page-nav">
+					<div class="page-nav__icons">
+						<div class="page-nav__icons-set">
+							<a class="page-nav__icon-link base-link" href="#">
+								<figure class="page-nav__icon-image base-figure">
+									<svg class="page-nav__icon-img" width="18" height="12">
+										<use href="../img/icon/sprite.svg#email-icon"></use>
+									</svg>
+								</figure>
+							</a>
+							<a class="page-nav__icon-link base-link" href="#">
+								<figure class="page-nav__icon-image base-figure">
+									<svg class="page-nav__icon-img" width="18" height="18">
+										<use href="../img/icon/sprite.svg#map-icon"></use>
+									</svg>
+								</figure>
+							</a>
+							<a class="page-nav__icon-link base-link" href="#">
+								<figure class="page-nav__icon-image base-figure">
+									<svg class="page-nav__icon-img" width="17" height="17">
+										<use href="../img/icon/sprite.svg#phone-icon"></use>
+									</svg>
+								</figure>
+							</a>
+						</div>
+						<div class="page-nav__service">
+							<a class="page-nav__tel-link" href="" >+7 000 000 00 00</a>
+							<a class="page-nav__icon-link base-link" href="#">
+								<figure class="page-nav__icon-image base-figure">
+									<svg class="page-nav__icon-img" width="15" height="15">
+										<use href="../img/icon/sprite.svg#search-icon"></use>
+									</svg>
+								</figure>
+							</a>
+							<button class="page-nav__login-button" type="button">
+								<figure class="page-nav__login-image base-figure">
+									<svg class="page-nav__login-img" width="15" height="18">
+										<use href="../img/icon/sprite.svg#lock-icon"></use>
+									</svg>
+								</figure>
+								<span class="page-nav__login-label">Войти</span>
+							</button>
+						</div>
+					</div>
+					<ul class="page-nav__nav-list base-list">
+						<li class="page-nav__nav-item">
+							<a class="page-nav__nav-link page-nav__nav-link--active base-link" href="#">Курсы</a>
+						</li>
+						<li class="page-nav__nav-item">
+							<a class="page-nav__nav-link base-link" href="#">Об Университете</a>
+						</li>
+						<li class="page-nav__nav-item">
+							<a class="page-nav__nav-link base-link" href="#">Преподаватели</a>
+						</li>
+						<li class="page-nav__nav-item">
+							<a class="page-nav__nav-link base-link" href="#">Отзывы</a>
+						</li>
+						<li class="page-nav__nav-item">
+							<a class="page-nav__nav-link base-link" href="#">Контакты</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</section>
+
+		<section class="heading section-block">
+			<div class="heading__container base-container">
+				<div class="heading__info">
+					<h1 class="heading__title base-title">
+						<span class="heading__accent">ХАССП</span> как<br>конкурентное преимущество
+					</h1>
+					<p class="heading__description base-par">
+						ХАССП (HACCP — Hazard Analysis and Critical Control Point) — 
+						анализ рисков и контроль критических точек. Основа производства 
+						безопасной пищевой продукции.
+					</p>
+				</div>
+			</div>
+		</section>
+
+	</header>
+
+	<main class="page-content">
+
+		<section class="features section-block">
+			<div class="features__container base-container">
+				<div class="features__item">
+					<h3 class="features__item-title base-title">Очно</h3>
+					<p class="features__item-desc base-par">
+						Занятия проводятся по запросу и в зависимости 
+						от загруженности эксперта. Уникальная возможность 
+						задать все волнующие вопросы.
+					</p>
+					<button class="features__learnmore-button base-button" type="button">
+						<span class="features__learnmore-label">Узнать подробне</span>
+					</button>
+				</div>
+				<div class="features__item">
+					<h3 class="features__item-title base-title">Вебинар</h3>
+					<p class="features__item-desc base-par">
+						Полный курс - серия вебинаров из 
+						6 модулей.
+					</p>
+					<button class="features__learnmore-button base-button" type="button">
+						<span class="features__learnmore-label">Узнать подробне</span>
+					</button>
+				</div>
+				<div class="features__item">
+					<h3 class="features__item-title base-title">Онлайн-курс</h3>
+					<p class="features__item-desc base-par">
+						Экономично и удобно! Полная информация по ХАССП в любое время.
+					</p>
+					<button class="features__learnmore-button base-button" type="button">
+						<span class="features__learnmore-label">Узнать подробне</span>
+					</button>
+				</div>
+			</div>
+		</section>
+
+		<div class="sectionset">
+			<div class="sectionset__container base-container">
+
+				<section class="forwho section-block">
+					<h2 class="forwho__title section-title base-title">Для кого:</h2>
+					<div class="forwho__inner">
+						<div class="forwho__container base-container">
+							<div class="forwho__top">
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-1.svg" width="23" height="30" alt="Иконка директора по качеству">
+									<h4 class="forwho__title base-title">Директор<br>по качеству</h4>
+								</div>
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-2.svg" width="30" height="30" alt="Иконка начальника лаборатории">
+									<h4 class="forwho__title base-title">Начальник<br>лаборатории</h4>
+								</div>
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-3.svg" width="25" height="29" alt="Иконка специалиста по качеству">
+									<h4 class="forwho__title base-title">Специалист<br> по качеству</h4>
+								</div>
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="Иконка начальника производства">
+									<h4 class="forwho__title base-title">Начальник<br>производства</h4>
+								</div>
+							</div>
+							<div class="forwho__bottom">
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="Иконка главного технолога">
+									<h4 class="forwho__title base-title">Главный<br>технолог</h4>
+								</div>
+								<div class="forwho__item">
+									<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="Иконка иных сотрудников предприятий">
+									<h4 class="forwho__title base-title">Иные сотрудники<br>предприятий </h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="specialist section-block">
+					<h2 class="specialist__title section-title base-title"></h2>
+					<div class="specialist__inner">
+						<figure class="specialist__image base-figure">
+							<picture>
+								<source srcset="../img/image/content/specialist-photo.webp 1x, ../img/image/content/X2-specialist-photo.webp 2x" type="image/webp">
+								<img srcset="../img/image/content/specialist-photo.jpg 1x, ../img/image/content/X2-specialist-photo.jpg 2x" class="specialist-photo" alt="Фотография Ольги Заваловской">
+							</picture>
+						</figure>
+						<div class="specialist__data">
+							<h3 class="specialist__name base-title">Ольга Заваловская </h3>
+							<p class="specialist__desc base-par">
+								старший менеджер по качеству департамента<br> 
+								закупок и логистики ООО «Росинтер Ресторантс». 
+							</p>
+							<a href="" class="specialist__learnmore base-link">Узнать подробнее</a>
+						</div>
+					</div>
+				</section>
+
+			</div>
+		</div>
+
+		<div class="sectionset">
+			<div class="sectionset__container base-container">
+
+				<section class="documents section-block">
+					<h2 class="documents__title section-title base-title"></h2>
+					<div class="documents__inner">
+						<div class="documents__item">
+							<span class="documents__label">
+								Сертификат о прохождении обучения темы (название одного из <br>модулей).
+							</span>
+							<figure class="documents__image base-figure">
+								<picture>
+									<source srcset="../img/image/content/document-1.webp 1x, ../img/image/content/X2-document-1.webp 2x" type="image/webp">
+									<img srcset="../img/image/content/document-1.jpg 1x, ../img/image/content/X2-document-1.jpg 2x" class="documents__photo" alt="Скан сертификата">
+								</picture>
+							</figure>
+						</div>
+						<div class="documents__item">
+							<span class="documents__label">
+								Удостоверение о краткосрочном повышении квалификации
+							</span>
+							<figure class="documents__image base-figure">
+								<picture>
+									<source srcset="../img/image/content/document-2.webp 1x, ../img/image/content/X2-document-2.webp 2x" type="image/webp">
+									<img srcset="../img/image/content/document-2.jpg 1x, ../img/image/content/X2-document-2.jpg 2x" class="documents__photo" alt="Фото удостоверения">
+								</picture>
+							</figure>
+						</div>
+					</div>
+				</section>
+
+				<section class="benefits section-block">
+					<h2 class="benefits__title section-title base-title">Что дает внедрение ХАССП:</h2>
+					<div class="benefits__inner">
+						<table class="benefits__table">
+							<tdhead class="benefits__table-header">
+								<tr class=benefits__table-row>
+									<th class="benefits__table-head">Внутренние<br>преимущества</th>
+									<th class="benefits__table-head">Внешние<br>преимущества</th>
+									<th class="benefits__table-head">Экономические</th>
+									<th class="benefits__table-head">Репутационные</th>
+								</tr>
+							</tdhead>
+							<tbody class="benefits__table-body">
+								<tr class="benefits__table-row">
+									<td class="benefits__table-data">Обнаружение слабых
+										мест на предприятии
+										через анализ рисков</td>
+									<td class="benefits__table-data">Повышение
+										доверия
+										потребителя к
+										производителю и
+										его продукции</td>
+									<td class="benefits__table-data">Экономия за счет снижение
+										количества брака
+										(предотвращение брака-
+										бесплатно, работа с
+										браком-убытки)</td>
+									<td class="benefits__table-data">Имидж компании
+										как надежного
+										партнера-
+										производителя
+										качественной и
+										безопасной
+										продукции</td>
+								</tr>
+								<tr class="benefits__table-row">
+									<td class="benefits__table-data">Переход от
+										корректирующих мер
+										к предупреждающим
+										(работа на
+										предотвращение
+										брака, а не на поиски
+										виновных при
+										появлении брака)</td>
+									<td class="benefits__table-data">Снижение жалоб
+										потребителей за
+										счет повышения
+										стандартов
+										качества и
+										безопасности</td>
+									<td class="benefits__table-data">Повышение
+										конкурентноспособности за
+										счет  признания системы
+										ХАССП на рынке</td>
+									<td class="benefits__table-data"></td>
+								</tr>
+								<tr class="benefits__table-row">
+									<td class="benefits__table-data">Прозрачность
+										процесса и
+										назначение
+										ответственных.</td>
+									<td class="benefits__table-data"></td>
+									<td class="benefits__table-data">Повышение
+										инвестиционной
+										привлекательности за счет
+										улучшенных показателей
+										(минимум брака,  статус
+										«ХАССП» и т.д.)</td>
+									<td class="benefits__table-data"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
+
+			</div>
+		</div>
+
+		<section class="contacts section-block">
+			<div class="contacts__info">
+				<div class="contacts__container base-container"></div>
+				<figure class="logo-block base-figure">
+					<img class="logo-block__img" src="../img/image/design/logo.png" width="72" height="58" alt="Логотип">
+					<h2 class="logo-block__logo-title base-title">УНИВЕРСИТЕТ<br>РОСИНТЕР</h2>
+				</figure>
+					<div class="contacts__main">
+						<h3 class="contacts__title base-title">Контакты</h3>
+						<ul class="contacts__list base-list">
+							<li class="contacts__item">
+								<a class="contacts__link base-link" href="">+7 000 000 00 00</a>
+							</li>
+							<li class="contacts__item">
+								<a class="contacts__link base-link" href="">info@mail.ru </a>
+							</li>
+						</ul>
+					</div>
+					<div class="contacts__adress">
+						<h4 class="contacts__adress-title base-title">Наш адрес:</h4>
+						<span class="contacts__adress-info">Москва, ул. Ленина, д. 7, стр. 1</span>
+					</div>
+					<div class="contacts__graphic-circle"></div>
+				</div>
+				<div class="contacts__map-block"></div>
+			</div>
+		</section>
+	</main>
+
+	<footer class="page-footer">
+		<a class="page-footer__policy base-link" href="#">Политика конфиденциальности</a>
+		<span class="page-footer__copyright-years">
+			© 2000 — 2019 «Росинтер Ресторантс»<br>Все права защищены.
+		</span>
+	</footer>
 <script src="./js/script.min.js"></script>
 </body>
 </html>
