--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<section class="navigation-menu">
 			<div class="navigation-menu__container base-container">
 				<figure class="navigation-menu__logo-block logo-block" id="nav-logo">
-					<img class="logo-block__img" src="../img/image/design/logo.png" width="59" height="58" alt="Логотип">
+					<img class="logo-block__img" src="img/image/design/logo.png" width="59" height="58" alt="Логотип">
 					<span class="logo-block__logo-title">Университет<br>Росинтер</span>
 				</figure>
 				<nav class="page-nav" id="nav-menu">
@@ -26,21 +26,21 @@
 						<li class="page-nav__contacts-item">
 							<a class="page-nav__contacts-link base-link" target="_blank" rel="noopener noreferrer" href="mailto:info@mail.ru">
 								<svg class="page-nav__contacts-icon" width="18" height="12">
-									<use href="../img/icon/sprite.svg#email-icon"></use>
+									<use href="img/icon/sprite.svg#email-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="page-nav__contacts-item">
 							<a class="page-nav__contacts-link base-link" href="#toMap">
 								<svg class="page-nav__contacts-icon" width="18" height="18">
-									<use href="../img/icon/sprite.svg#map-icon"></use>
+									<use href="img/icon/sprite.svg#map-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="page-nav__contacts-item page-nav__contacts-item--phone">
 							<a class="page-nav__contacts-link base-link" href="tel: +70000000000">
 								<svg class="page-nav__contacts-icon" width="17" height="17">
-									<use href="../img/icon/sprite.svg#phone-icon"></use>
+									<use href="img/icon/sprite.svg#phone-icon"></use>
 								</svg>
 								<span class="page-nav__contacts-phone">+7 000 000 00 00</span>
 							</a>
@@ -48,7 +48,7 @@
 						<li class="page-nav__contacts-item">
 							<a class="page-nav__contacts-link base-link" href="#">
 								<svg class="page-nav__contacts-icon" width="15" height="15">
-									<use href="../img/icon/sprite.svg#search-icon"></use>
+									<use href="img/icon/sprite.svg#search-icon"></use>
 								</svg>
 							</a>
 						</li>
@@ -56,7 +56,7 @@
 							<button class="page-nav__login-button base-button" type="button">
 								<figure class="page-nav__login-image page-figure">
 									<svg class="page-nav__login-img" width="18" height="18">
-										<use href="../img/icon/sprite.svg#lock-icon"></use>
+										<use href="img/icon/sprite.svg#lock-icon"></use>
 									</svg>
 								</figure>
 								<span class="page-nav__login-label">Войти</span>
@@ -159,29 +159,29 @@
 					<div class="forwho__inner">
 						<div class="forwho__top">
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-1.svg" width="23" height="30" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-1.svg" width="23" height="30" alt="">
 								<h4 class="forwho__item-title">Директор<br>по&nbsp;качеству</h4>
 							</div>
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-2.svg" width="30" height="30" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-2.svg" width="30" height="30" alt="">
 								<h4 class="forwho__item-title">Начальник<br>лаборатории</h4>
 							</div>
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-3.svg" width="25" height="29" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-3.svg" width="25" height="29" alt="">
 								<h4 class="forwho__item-title">Специалист<br> по&nbsp;качеству</h4>
 							</div>
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-4.svg" width="30" height="30" alt="">
 								<h4 class="forwho__item-title">Начальник<br>производства</h4>
 							</div>
 						</div>
 						<div class="forwho__bottom">
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-4.svg" width="30" height="30" alt="">
 								<h4 class="forwho__item-title">Главный<br>технолог</h4>
 							</div>
 							<div class="forwho__item">
-								<img class="forwho__icon" src="../img/image/content/forwho-4.svg" width="30" height="30" alt="">
+								<img class="forwho__icon" src="img/image/content/forwho-4.svg" width="30" height="30" alt="">
 								<h4 class="forwho__item-title">Иные сотрудники<br>предприятий </h4>
 							</div>
 						</div>
@@ -194,8 +194,8 @@
 					<div class="specialist__inner">
 						<figure class="specialist__image">
 							<picture>
-								<source srcset="../img/image/content/specialist-photo.webp 1x, ../img/image/content/X2-specialist-photo.webp 2x" type="image/webp">
-								<img srcset="../img/image/content/specialist-photo.jpg 1x, ../img/image/content/X2-specialist-photo.jpg 2x" class="specialist__photo" alt="Фотография Ольги Заваловской">
+								<source srcset="img/image/content/specialist-photo.webp 1x, img/image/content/X2-specialist-photo.webp 2x" type="image/webp">
+								<img srcset="img/image/content/specialist-photo.jpg 1x, img/image/content/X2-specialist-photo.jpg 2x" class="specialist__photo" alt="Фотография Ольги Заваловской">
 							</picture>
 						</figure>
 						<div class="specialist__data">
@@ -222,8 +222,8 @@
 							</span>
 							<figure class="documents__image">
 								<picture>
-									<source srcset="../img/image/content/document-1.webp 1x, ../img/image/content/X2-document-1.webp 2x" type="image/webp">
-									<img srcset="../img/image/content/document-1.jpg 1x, ../img/image/content/X2-document-1.jpg 2x" class="documents__photo" alt="Скан сертификата">
+									<source srcset="img/image/content/document-1.webp 1x, img/image/content/X2-document-1.webp 2x" type="image/webp">
+									<img srcset="img/image/content/document-1.jpg 1x, img/image/content/X2-document-1.jpg 2x" class="documents__photo" alt="Скан сертификата">
 								</picture>
 							</figure>
 						</div>
@@ -233,8 +233,8 @@
 							</span>
 							<figure class="documents__image base-figure">
 								<picture>
-									<source srcset="../img/image/content/document-2.webp 1x, ../img/image/content/X2-document-2.webp 2x" type="image/webp">
-									<img srcset="../img/image/content/document-2.jpg 1x, ../img/image/content/X2-document-2.jpg 2x" class="documents__photo" alt="Фото удостоверения">
+									<source srcset="img/image/content/document-2.webp 1x, img/image/content/X2-document-2.webp 2x" type="image/webp">
+									<img srcset="img/image/content/document-2.jpg 1x, img/image/content/X2-document-2.jpg 2x" class="documents__photo" alt="Фото удостоверения">
 								</picture>
 							</figure>
 						</div>
@@ -340,7 +340,7 @@
 			<div class="contacts__info">
 				<div class="contacts__info-inner">
 					<figure class="contacts__logo-block logo-block">
-						<img class="logo-block__img" src="../img/image/design/logo.png" width="59" height="58" alt="Логотип">
+						<img class="logo-block__img" src="img/image/design/logo.png" width="59" height="58" alt="Логотип">
 						<span class="logo-block__logo-title">Университет<br>Росинтер</span>
 					</figure>
 					<div class="contacts__main">
@@ -349,7 +349,7 @@
 							<li class="contacts__item">
 								<a class="contacts__link base-link" href="tel: +70000000000">
 									<svg class="contacts__icon" width="17" height="17">
-										<use href="../img/icon/sprite.svg#phone-icon"></use>
+										<use href="img/icon/sprite.svg#phone-icon"></use>
 									</svg>
 									<span class="contacts__label contacts__label--phone">+7 000 000 00 00</span>
 								</a>
@@ -357,7 +357,7 @@
 							<li class="contacts__item">
 								<a class="contacts__link base-link" target="_blank" rel="noopener noreferrer" href="mailto:info@mail.ru">
 									<svg class="contacts__icon" width="18" height="12">
-										<use href="../img/icon/sprite.svg#email-icon"></use>
+										<use href="img/icon/sprite.svg#email-icon"></use>
 									</svg>
 									<span class="contacts__label">info@mail.ru </span>
 								</a>
