--- a/index.html
+++ b/index.html
@@ -213,12 +213,13 @@
 
 		<div class="sectionset sectionset--two">
 			<div class="sectionset__container base-container">
+
 				<section class="documents">
 					<h2 class="documents__title section-title">Выдаваемые документы:</h2>
 					<div class="documents__inner">
 						<div class="documents__item">
 							<span class="documents__label">
-								Сертификат о&nbsp;прохождении обучения темы (название одного из&nbsp;модулей).
+								Сертификат о&nbsp;прохождении<br> обучения темы (название одного из&nbsp;модулей).
 							</span>
 							<figure class="documents__image">
 								<picture>
@@ -229,7 +230,7 @@
 						</div>
 						<div class="documents__item">
 							<span class="documents__label">
-								Удостоверение о&nbsp;краткосрочном повышении квалификации.
+								Удостоверение о&nbsp;краткосрочном<br> повышении квалификации.
 							</span>
 							<figure class="documents__image base-figure">
 								<picture>
@@ -246,43 +247,39 @@
 					<h2 class="benefits__title section-title base-title">Что дает внедрение ХАССП:</h2>
 					<div class="benefits__inner">
 						<table class="benefits__table">
-							<tdhead class="benefits__table-header">
-								<tr class=benefits__table-headrow>
-									<th class="benefits__table-head">Внутренние<br>преимущества</th>
-									<th class="benefits__table-head">Внешние<br>преимущества</th>
-									<th class="benefits__table-head">Экономические</th>
-									<th class="benefits__table-head">Репутационные</th>
+							<thead class="benefits__table-headline">
+								<tr class="benefits__table-headrow">
+									<th class="benefits__table-headdata">Внутренние преимущества</th>
+									<th class="benefits__table-headdata">Внешние преимущества</th>
+									<th class="benefits__table-headdata">Экономические</th>
+									<th class="benefits__table-headdata">Репутационные</th>
 								</tr>
-							</tdhead>
+							</thead>
 							<tbody class="benefits__table-body">
 								<tr class="benefits__table-row">
 									<td class="benefits__table-data">
 										Обнаружение слабых
-										мест на&nbsp;предприятии
+										мест на предприятии
 										через анализ рисков
 									</td>
 									<td class="benefits__table-data">
-										Повышение
-											доверия
-											потребителя к
-											производителю и
-											его продукции
+										Повышение доверия
+										потребителя к производителю и
+										его продукции
 									</td>
 									<td class="benefits__table-data">
-										Экономия за&nbsp;счет	
-										снижение
+										Экономия за счет снижение
 										количества брака
-										(предотвращение
-										брака-
+										(предотвращение брака-
 										бесплатно, работа с
-										<nobr>браком-убытки</nobr>)
+										браком-убытки)
 									</td>
 									<td class="benefits__table-data">
-										Имидж компании	
+										Имидж компании
 										как надежного
 										партнера-
-										производителя	
-										качественной и	
+										производителя
+										качественной и
 										безопасной
 										продукции
 									</td>
@@ -290,23 +287,27 @@
 								<tr class="benefits__table-row">
 									<td class="benefits__table-data">
 										Переход от
-										корректирующих мер	
-										к&nbsp;предупреждающим	
+										корректирующих мер
+										к предупреждающим
 										(работа на
 										предотвращение
-										брака, а&nbsp;не&nbsp;на&nbsp;поиски	
+										брака, а не на поиски
 										виновных при
 										появлении брака)
 									</td>
 									<td class="benefits__table-data">
-										Снижение жалоб	потребителей за&nbsp;счет 
-										повышения	стандартов	качества и&nbsp;безопасности
+										Снижение жалоб
+										потребителей за
+										счет повышения
+										стандартов
+										качества и
+										безопасности
 									</td>
 									<td class="benefits__table-data">
 										Повышение
 										конкурентноспособности за
-										счет признания системы
-										ХАССП на&nbsp;рынке
+										счет  признания системы
+										ХАССП на рынке
 									</td>
 									<td class="benefits__table-data"></td>
 								</tr>
@@ -321,10 +322,10 @@
 									<td class="benefits__table-data">
 										Повышение
 										инвестиционной
-										привлекательности за&nbsp;счет
+										привлекательности за счет
 										улучшенных показателей
-										(минимум брака, статус
-										&laquo;ХАССП&raquo; <nobr>и т. д.</nobr>)
+										(минимум брака,  статус
+										«ХАССП» и т.д.)
 									</td>
 									<td class="benefits__table-data"></td>
 								</tr>
@@ -332,6 +333,7 @@
 						</table>
 					</div>
 				</section>
+
 			</div>
 		</div>
 
